--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <footer>
         <div class="right-div">
             <h3>نمایشگاه دائمی کابینت و دکوراسیون آشپزخانه</h3>
-            <span> به جهت رفاه حال مشتریان خود اقدام به برپایی نمایشگاه دائمی کابینت آشپزخانه در محل کارخانه نموده تا بازدید کنندگان از نزدیک انواع کابینت از نظر متریال و سبک را مشاهده و لمس کنند، بازدید از این نمایشگاه رایگان و برای عموم آزاد است و تنها کافیست قبل از حضور با شماره تلفن09123724172  تماس برقرار کرده و زمان بازدید را مشخص نمایید.</span>
+            <span> بازدید از این نمایشگاه رایگان و برای عموم آزاد است و تنها کافیست قبل از حضور با شماره تلفن09123724172  تماس برقرار کرده و زمان بازدید را مشخص نمایید.</span>
             <div class="location">
                 <img src="location.svg" class="location-svg">
                 <span>سایت خاوران-چوستان3 پلاک31-51</span>
