--- a/contact us.html
+++ b/contact us.html
@@ -4,30 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./cont.css">
+    <link rel="stylesheet" href="cont.css">
 </head>
 <body>
     <div class="header-item">
         <h2><span class="span-header">DECORATIV</span></h2>
         <ul>
-            <li><a href="../home page/index.html">خانه</a></li>
+            <li><a href="index.html">خانه</a></li>
             <li><a href="#">درباره ما</a></li>
             <li><a href="#" class="products-header">نمونه کارها</a></li>
         </ul>
     </div>
     <div class="continer">
         <div class="top">
-            <img src="./img/phone.svg" alt="phone">
+            <img src="phone.svg" alt="phone">
             <span>تماس با ما : 09123724172</span>
         </div>
         <div class="border"></div>
         <div class="center">
-            <img src="./img/location.svg" alt="location">
+            <img src="location.svg" alt="location">
             <span>آدرس ما : سایت خاوران چوبستان 3 پلاک 5131</span>
         </div>
         <div class="border"></div>
         <div class="end">
-            <img src="./img/email.svg" alt="email">
+            <img src="email.svg" alt="email">
             <span>آدرس ایمیل : omidmw@gmail.com</span>
         </div>
     </div>
