--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="./index.html">خانه</a></li>
                     <li><a href="#">درباره ما</a></li>
                     <li><a href="#" class="products-header">نمونه کارها</a></li>
-                    <li><a href="../cocntactUs/contact us.html">ارتباط با ما</a></li>
+                    <li><a href="contact us.html">ارتباط با ما</a></li>
                 </ul>
             </nav>
            
